* Client: Removed automatic conversion of old format unspent4 to the new UTXO.db
* Client: If pong comes out but a block is still pending, timeout it and dont ask this peer for blocks again.
* Client: "CFG.UTXOSaveSec" replaced with "CFG.UTXOSave.SecondsToTake" and "CFG.UTXOSave.BlocksToHold"
* Tools/balio: added support for fetching bech32 encoded addresses (via blockchair.com)

1.9.4 - 2018-04-11
NOTE: Use older wallet version (e.g. 1.9.3) if you had wallet type 2 or 4 already generated, but have problems spending from it now.

* Added support for native segwit addresses (P2WPKH and P2WSH)
* Client: Removed extra code added to investigate "the main loop got stuck in network.Tick()" problem (seems to be fixed now)
* Client: Fixed problem with calculating insanely high average fee (seen on testnet @ block 1256442)
* Client: When fetching balance, download missing txs from www also for testnet
* "lib/ltc" package moved to "lib/others/ltc"
* Tools/Balio: Suports LTC and Testnet again
* WebUI: Changed the string to look for inside the wallet from "Auto-translate to SegWit" to "SegWit" or "SegWit P2SH"
* WebUI/Transactions: auto refresh "Own TXs" after bloadcasting a tx
* WebUI/Transactions: Show accumulated VSize() on X-axis (insted of accumulated raw size of the txs)
* Lib: fixed issue #32 (Broken private key padding)
* Completely removed support for stealth addresses
* Client: store length of wallet's balance maps (in "mapsize.gob") for time and memory optimization on next boot
* Client: improved time of loading mempool from disk
* Client: "friends.txt" file moved to the data directory
* Client/WebUI/Transactions: Use transaction weights, instead of VSize
* Client: mempool code spread across several files
* Client: mempool improved algorithm for sorting mempool (e.g. added child-pays-for-parent)
* Client/WebUI/Transactions: Use Quick (less bandwidth consuming) mode for "Memory Pool" charts
* WebUI/Home: Show the fee chart when clicked on a block's dot