@@ -136,6 +136,7 @@
 * Client: If pong comes out but a block is still pending, timeout it and dont ask this peer for blocks again.
 * Client: "CFG.UTXOSaveSec" replaced with "CFG.UTXOSave.SecondsToTake" and "CFG.UTXOSave.BlocksToHold"
 * Tools/balio: added support for fetching bech32 encoded addresses (via blockchair.com)
+* Wallet: New command line switch "-pks" to dump wallet's raw public keys (instead of deposit addresses)
 
 1.9.4 - 2018-04-11
 NOTE: Use older wallet version (e.g. 1.9.3) if you had wallet type 2 or 4 already generated, but have problems spending from it now.
